--- a/app/src/main/res/layout/activity_video_feed.xml
+++ b/app/src/main/res/layout/activity_video_feed.xml
@@ -30,4 +30,58 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </FrameLayout>
+
+    <Button
+        android:id="@+id/ativar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="32dp"
+        android:onClick="ativar"
+        android:text="Ativar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel" />
+
+    <Button
+        android:id="@+id/desativar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="32dp"
+        android:onClick="desativar"
+        android:text="Desativar"
+        app:layout_constraintStart_toEndOf="@+id/ativar"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel" />
+
+    <Button
+        android:id="@+id/takeOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="32dp"
+        android:onClick="takeOff"
+        android:text="Take off"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ativar" />
+
+    <Button
+        android:id="@+id/land"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="32dp"
+        android:onClick="land"
+        android:text="Land"
+        app:layout_constraintStart_toEndOf="@+id/takeOff"
+        app:layout_constraintTop_toBottomOf="@+id/desativar" />
+
+    <TextView
+        android:id="@+id/resultLabel2"
+        android:layout_width="223dp"
+        android:layout_height="197dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="60dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/takeOff" />
 </androidx.constraintlayout.widget.ConstraintLayout>
