--- a/app/src/main/res/layout/activity_video_feed.xml
+++ b/app/src/main/res/layout/activity_video_feed.xml
@@ -11,7 +11,7 @@
         android:layout_width="262dp"
         android:layout_height="63dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
@@ -35,7 +35,7 @@
         android:id="@+id/ativar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="32dp"
         android:onClick="ativar"
         android:text="Ativar"
@@ -46,7 +46,7 @@
         android:id="@+id/desativar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:onClick="desativar"
         android:text="Desativar"
@@ -57,7 +57,7 @@
         android:id="@+id/takeOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="32dp"
         android:onClick="takeOff"
         android:text="Take off"
@@ -68,7 +68,7 @@
         android:id="@+id/land"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:onClick="land"
         android:text="Land"
@@ -89,10 +89,33 @@
         android:id="@+id/btnDance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="24dp"
+        android:onClick="toggleDance"
         android:text="Dancar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultLabel2" />
+
+    <Button
+        android:id="@+id/btnDetect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="24dp"
+        android:onClick="toggleDetecting"
+        android:text="Detectar"
+        app:layout_constraintStart_toEndOf="@+id/btnDance"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel2" />
+
+    <Button
+        android:id="@+id/btnGesture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="20dp"
+        android:onClick="toggleGesture"
+        android:text="Gestos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDance" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
